// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password when the token is expired 1`] = `
Object {
  "message": "Expired reset password token",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password when the token is expired 2`] = `
Object {
  "message": "Your password has been changed sucessfully. You can not log in.",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password when there is no match 1`] = `
Object {
  "errors": Array [
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password when there is no matching token in db 1`] = `
Object {
  "message": "Invalid reset password token",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password with too short passwords 1`] = `
Object {
  "errors": Array [
    "Required data in user.password must have at least 6 characters.",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password without input 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.token'",
    "Missing required value in 'user.password'",
    "Missing required value in 'user.password_confirmation'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password without password 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.password'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password without password_confirmation 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.password_confirmation'",
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password without passwords match 1`] = `
Object {
  "errors": Array [
    "Passwords must match in user",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should fail to reset password without token 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.token'",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/resetPassword/resetPassword.test.ts should successfuly change user password, delete token, and send email 1`] = `
Object {
  "message": "Your password has been changed sucessfully. You can not log in.",
}
`;
